Add link to game2 to index.html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
       <h2>Зроблена</h2>
       <div>Менск, Беларусь</div>
       <div class="rs">
-        <img src="./images/rsscool.png" alt="rolling scopes logo" width="200" height="200">
+        <a href="./game2/index.html">
+          <img src="./images/rsscool.png" alt="rolling scopes logo" width="200" height="200">
+        </a>
       </div>
       <div class="author">
         <b>Сяргей Варфаламееў © 2018</b>
