--- a/game-2018Q3/index.html
+++ b/game-2018Q3/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>game</title>
-    <link rel="stylesheet" href="/dist/main.css">
+    <!-- <link rel="stylesheet" href="/dist/main.css"> -->
   </head>
   <body>
     <div id="app"></div>
     <audio id="audio" loop></audio>    
-    <script src="/dist/build.js"></script>
+    <script src="./dist/build.js"></script>
   </body>
 </html>
